[Feature] 빌드(app.build.gradle.kts) 관련 세팅 추가 & 키보드 인풋 관련 추가

--- a/gradle.properties
+++ b/gradle.properties
@@ -24,3 +24,5 @@ android.nonTransitiveRClass=true
 
 kotlin.experimental.tryK2=true
 kapt.use.k2=true
+
+android.defaults.buildfeatures.buildconfig=true
